방 리스트 js 파일 분리

--- a/omok/room.html
+++ b/omok/room.html
@@ -56,7 +56,8 @@
         <div>
             <!-- 기능버튼 영역 -->
             <button class="button start">(재)시작</button>
-            <button class="button undo">무르기</button>
+            <button class="button undo">무르기 요청</button>
+            <button class="button exit">나가기</button>
         </div>
     </div>
 
