방 정보 주기

--- a/omok/room.html
+++ b/omok/room.html
@@ -9,6 +9,9 @@
     <title>오목 게임</title>
 </head>
 <body>
+    <div class="room-info">
+        <span class="room-name"></span>
+    </div>
     <div class="container">
         <div class="main-board">
             <canvas class="canvas" width="608" height="638">
